# foodsaving

./: .coverage  .coveragerc  .docker-compose.dev.yaml  .dockerignore  .env.local  .env.local.api_test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.api-test.yaml  docker-compose.utility.yaml  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: linter-and-tests.yml  main.yml
cheap_daily/: asgi.py  settings.py  urls.py  wsgi.py
cheap_daily/static/css/: account.css  header.css  home_page.css  registration_auth.css  style.css
cheap_daily/static/js/: base.js
restaurants/: admin.py  apps.py  models.py  views.py
services/: email_service.py
templates/: base.html  log_in.html
users/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
users/api_tests/: test_dummy.py
users/migrations/: 0001_initial.py  0001_user_model.py
users/templates/users/: account.html  add_user.html  change_password.html  index.html  user_registration.html
users/templates/users/emails/: account_activation_email.html
