[tool.poetry]
name = "foodsaving"
version = "0.1.0"
description = "Python Django application which allows restaurants post surplus food and customers to buy it"
authors = ["Artem Marhaza <artemmrgz@gmail.com>", "Andriy Stefanyuk <stefanyuk.andriyigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
poethepoet = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
