[tool.poetry]
name = "foodsaving"
version = "0.1.0"
description = "Python Django application which allows restaurants post surplus food and customers to buy it"
authors = ["Artem Marhaza <artemmrgz@gmail.com>", "Andriy Stefanyuk <stefanyuk.andriyigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
psycopg2-binary = "^2.9.3"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.start]
cmd = "docker-compose --env-file .env.local up"
help = "starts the app locally inside the container"

[tool.poe.tasks.stop]
cmd = "docker-compose down"
help = "stops the app running inside the container"

[tool.poe.tasks.manage]
cmd = "docker-compose -f docker-compose.utility.yaml run food-app-util"
help = "runs utility container, with the help of which we can manage app. Add appropriate command at the end."


[tool.poe.tasks.change_files_owner]
cmd = "sudo chown $USER:$USER ."
help = "changes owner of all files in the directory when command is being invoked to current user"
